# apt-cacher-ng

./: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  TODO  TODO.md  apt-cacher-ng-3.7.5.tar.xz.delta  apt-cacher-ng-3.7.5.tar.xz.id  apt-cacher-ng_3.6.1.orig.tar.xz.delta  apt-cacher-ng_3.6.1.orig.tar.xz.id  apt-cacher-ng_3.6.2.orig.tar.xz.delta  apt-cacher-ng_3.6.2.orig.tar.xz.id  apt-cacher-ng_3.6.3.orig.tar.xz.delta  apt-cacher-ng_3.6.3.orig.tar.xz.id  apt-cacher-ng_3.6.4.orig.tar.xz.delta  apt-cacher-ng_3.6.4.orig.tar.xz.id  apt-cacher-ng_3.6.orig.tar.xz.delta  apt-cacher-ng_3.6.orig.tar.xz.id  apt-cacher-ng_3.7.1.orig.tar.xz.delta  apt-cacher-ng_3.7.1.orig.tar.xz.id  apt-cacher-ng_3.7.2.orig.tar.xz.delta  apt-cacher-ng_3.7.2.orig.tar.xz.id  apt-cacher-ng_3.7.3.orig.tar.xz.delta  apt-cacher-ng_3.7.3.orig.tar.xz.id  apt-cacher-ng_3.7.4.orig.tar.xz.delta  apt-cacher-ng_3.7.4.orig.tar.xz.id  apt-cacher-ng_3.7.5.orig.tar.xz.delta  apt-cacher-ng_3.7.orig.tar.xz.delta  apt-cacher-ng_3.7.orig.tar.xz.id  build.sh
client/: CMakeLists.txt  client.cc
conf/: CMakeLists.txt  acng.conf.in  archlx_mirrors  cygwin_mirrors  delconfirm.html  epel_mirrors  fedora_mirrors  kali_mirrors  maint.html  report.html  sfnet_mirrors  sl_mirrors  style.css  ubuntu_mirrors  userinfo.html
contrib/: apt-cacher-ng.conf
dbgen/: Makefile  sig-debian  sig-fsnap  sig-slsnap  sig-ubuntu
debian/: README.Debian  apt-cacher-ng.NEWS  apt-cacher-ng.config  apt-cacher-ng.cron.daily  apt-cacher-ng.links  apt-cacher-ng.lintian-overrides  apt-cacher-ng.postinst  apt-cacher-ng.postrm  changelog  control  rules
debian/source/: lintian-overrides
fs/: CMakeLists.txt  httpfs.cc
include/: acbuf.h  acfg.h  aclogger.h  aconnect.h  acregistry.h  acsmartptr.h  acsyscap.h.in  actemplates.h  actypes.h  ahttpurl.h  astrop.h  bgtask.h  cacheman.h  caddrinfo.h  cleaner.h  conn.h  csmapping.h  debug.h  dlcon.h  ebrunner.h  evabase.h  fileio.h  fileitem.h  filereader.h  header.h  httpdate.h  job.h  lockable.h  maintenance.h  meta.h  remotedb.h  sockio.h  tcpconnect.h
oldssl-workaround/: CMakeLists.txt
scripts/: Makefile.release
source/: CMakeLists.txt  acbuf.cc  acerrno.cc  acfg.cc  acfg_defaults.cc  aclogger.cc  acngtool.cc  acregistry.cc  apt-cacher.cc  astrop.cc  bgtask.cc  cacheman.cc  caddrinfo.cc  cleaner.cc  conn.cc  conserver.cc  dirwalk.cc  dlcon.cc  ebrunner.cc  evabase.cc  expiration.cc  fileio.cc  fileitem.cc  filelocks.cc  filereader.cc  header.cc  httpdate.cc  job.cc  maintenance.cc  meta.cc  mirror.cc  pkgimport.cc  showinfo.cc  sockio.cc  tcpconnect.cc  tpool.cc
src/: CMakeLists.txt  ac3rdparty.cc  ac3rdparty.h  acbuf.cc  acbuf.h  acevents.h  acfg.cc  acfg.h  acfg_defaults.cc  acfgshared.h  acforwarder.cc  acforwarder.h  ackeepalive.cc  ackeepalive.h  aclocal.cc  aclocal.h  aclock.cc  aclock.h  aclogger.cc  aclogger.h  acngtool.cc  acomcommon.h  aconnect.cc  aconnect.h  aconnfac.h  acpatcher.cc  acpatcher.h  acregistry.cc  acregistry.h  acres.cc  acres.h  acsmartptr.h  acstartstop.cc  acstartstop.h  acsyscap.h.in  actemplates.h  actypes.h  acutilev.cc  acutilev.h  acutilpath.cc  (+87 more)
systemd/: CMakeLists.txt  apt-cacher-ng.service.in
tests/: CMakeLists.txt  cascade.sh  plan.txt  testblob
tests/src/: it_job.cc  it_transport.cc  main.cc  main.h  oldcode.cc  testcommon.h  ut_algos.cc  ut_cacheman.cc  ut_dns.cc  ut_http.cc  ut_io.cpp  ut_server.cc  ut_server_misc.cc
