PROJECT(ACNG CXX C)

ADD_EXECUTABLE(in.acng client.cc)
TARGET_COMPILE_FEATURES(in.acng PRIVATE cxx_auto_type)
SET_TARGET_PROPERTIES(in.acng PROPERTIES COMPILE_FLAGS "${ACNG_COMPFLAGS} ${ACNG_CXXFLAGS} -DMINIBUILD")
TARGET_LINK_LIBRARIES(in.acng ${NetworkLibs} ${EXTRA_LIBS_INETD})
INSTALL(TARGETS in.acng DESTINATION ${LIBDIR})
